<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context="hu.daniel.vince.humanmobility.view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_login_horizontal_margin"
        android:paddingRight="@dimen/activity_login_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <!-- Content start -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:tint="@color/color_accent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/application_name"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_display"
            tools:ignore="MissingPrefix"/>

        <Button
            android:id="@+id/register_button"
            style="@style/ButtonStyle.Default"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:text="@string/authentication_register"/>

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonStyle.Login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/authentication_login"/>

        <!-- Content end -->

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/authentication_accept"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_body_primary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/terms_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/authentication_terms"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_button"/>

    </LinearLayout>

</ScrollView>
