<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/dialog_side_margin"
    android:paddingRight="@dimen/dialog_side_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <LinearLayout
            android:id="@+id/terms_accept_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="2dp"
                android:background="@color/color_accent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/authentication_accept"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_body_primary"/>

        </LinearLayout>

        <EditText
            android:id="@+id/email_input"
            style="@style/InputStyle"
            android:hint="@string/authentication_email"
            android:inputType="text"/>

        <EditText
            android:id="@+id/password_input"
            style="@style/InputStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/authentication_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/password_2_input"
            style="@style/InputStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/authentication_password_2"
            android:inputType="textPassword"/>

        <requestFocus/>

    </LinearLayout>

</ScrollView>
