<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Divider -->

    <FrameLayout
        android:id="@+id/item_divider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/divider">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:alpha="0.6"
            android:background="@drawable/shape_top_shadow"/>

    </FrameLayout>

    <!-- Header -->

    <TextView
        android:id="@+id/item_title"
        style="@style/HeaderStyle"
        android:text="{Date}"/>

    <!-- Content start -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- Records in time -->

        <TextView
            android:id="@+id/item_records_in_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{0h}"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_headline"/>

        <!-- Progress -->

        <ProgressBar
            android:id="@+id/item_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:progress="50"
            android:progressDrawable="@drawable/shape_progress_drawable"/>

        <!-- Counts start -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Records -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/main_records"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_caption"/>

                <TextView
                    android:id="@+id/item_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="{0}"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_body_primary"/>

            </LinearLayout>

            <!-- Errors -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/main_errors"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_caption"/>

                <TextView
                    android:id="@+id/item_errors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="{0}"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_body_primary"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Counts end -->

    </LinearLayout>

    <!-- Content end -->

    <LinearLayout
        android:id="@+id/item_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/place_title"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_body_secondary"
            tools:ignore="MissingPrefix"/>

        <ImageView
            android:id="@+id/item_dropdown_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_dropdown_24dp"
            android:visibility="visible"/>

    </LinearLayout>

</LinearLayout>